@@ -1,13 +1,15 @@
 Release notes for SIP Express Router (ser)
 ***********************************************
 
-$Id: NEWS,v 1.76 2008/03/31 06:35:57 bpintea Exp $
+$Id: NEWS,v 1.77 2008/03/31 18:41:48 bpintea Exp $
 
 
 
 2.1.0 changes
 
 modules:
+ - avp       - export new selects table to allow dissecting the content of an
+               attribute by interpreting it as a "name-addr" value 
  - auth      - added extra authentication checks support, to protect
                against various reply attacks.
              - params:
